feat: Implement Knowledge Base Management System
- Added KnowledgeBasePage component for managing knowledge articles with search, filters, and pagination.
- Created types for KnowledgeArticle, ArticleSearchRequest, and their statuses.
- Developed backend services including KnowledgeArticleController and KnowledgeArticleService for CRUD operations and article search.
- Introduced data seeding functionality to populate initial knowledge articles.
- Implemented embedding status management for articles.
- Added DTOs for transferring article data between client and server.
- Integrated MapStruct for object mapping between entities and DTOs.
- Enhanced article statistics retrieval and bulk publishing functionality.